[metadata]
name = movieonhand-insafm
version = 0.0.1
author = Mohammed Insaf M
author_email = me@insafweb.in
description = A python package for downloading movie from tamilblasters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/insafm/MovieOnHand
project_urls =
    Bug Tracker = https://github.com/insafm/MovieOnHand/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src